--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="right">
-          <img src="img/jani.jpg" alt="">
+          <img src="img/.jpg" alt="">
         </div>
       </div>
       <!-- clear floats -->
@@ -116,7 +116,7 @@
         </div>
 
         <div class="left">
-          <img src="img/onni.jpg" alt="">
+          <img src="img/.jpg" alt="">
         </div>
       </div>
 
@@ -148,7 +148,7 @@
             <img src="img/onni.jpg" alt="team-member">
             <p>
               Onni Hakkari <br />
-              Junior SDN Developer
+              SDN Developer
             </p>
           </div>
 
@@ -156,7 +156,7 @@
             <img src="img/joonas.jpg" alt="team-member">
             <p>
               Joonas Lipponen <br />
-              Junior SDN Developer
+              SDN Developer
 
             </p>
           </div>
@@ -165,7 +165,7 @@
             <img src="img/jani.jpg" alt="team-member">
             <p>
               Jani Kerttula <br />
-              Junior SDN Developer
+              SDN Developer
 
             </p>
           </div>
@@ -174,7 +174,7 @@
             <img src="img/antti.jpg" alt="team-member">
             <p>
               Antti Lohtaja <br />
-              Junior SDN Developer
+              SDN Developer
 
             </p>
           </div>
@@ -183,7 +183,7 @@
             <img src="img/mikael.jpg" alt="team-member">
             <p>
               Mikael Malste <br />
-              Junior SDN Developer
+              SDN Developer
 
             </p>
           </div>
