font sizes and padding fixed

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="container">
         <div class="right note">
           <p>
-            Our challenge is to provide something <strong>new and exciting</strong> to networking
+            Our challenge is to provide something new and exciting to networking
             and connecting networks, and the solution is to use SDN-networks instead of normal networking solutions.
           </p>
         </div>
