--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="team-images">
           <div class="team-member">
 
-            <img src="img/toni.jpg" alt="team-member">
+            <a href="https://www.linkedin.com/in/toni-tanninen-161262144/" target="_blank"><img src="img/toni.jpg" alt="team-member"></a>
             <p>
               Toni Tanninen <br />
               AI/SDN Developer <br />
@@ -148,7 +148,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img/onni.jpg" alt="team-member">
+            <a href="https://www.linkedin.com/in/onni-hakkari-802190130/" target="_blank"><img src="img/onni.jpg" alt="team-member"></a>
             <p>
               Onni Hakkari <br />
               SDN Developer
@@ -156,7 +156,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img/joonas.jpg" alt="team-member">
+            <a href="https://www.linkedin.com/in/joonas-lipponen-8994b2143/" target="_blank"><img src="img/joonas.jpg" alt="team-member"></a>
             <p>
               Joonas Lipponen <br />
               SDN Developer
@@ -165,7 +165,7 @@
           </div>
 
           <div class="team-member">
-            <img src="img/jani.jpg" alt="team-member">
+            <a href="https://www.linkedin.com/in/jani-kerttula-54938b12b/" target="_blank"><img src="img/jani.jpg" alt="team-member"></a>
             <p>
               Jani Kerttula <br />
               SDN Developer
@@ -174,8 +174,8 @@
           </div>
 
           <div class="team-member">
-            <img src="img/antti.jpg" alt="team-member">
-            <p>
+            <a href="https://www.linkedin.com/in/antti-lohtaja-528201133/" target="_blank"><img src="img/antti.jpg" alt="team-member">
+            </a><p>
               Antti Lohtaja <br />
               SDN Developer
 
@@ -183,11 +183,10 @@
           </div>
 
           <div class="team-member">
-            <img src="img/mikael.jpg" alt="team-member">
-            <p>
+            <a href="https://www.linkedin.com/in/mikael-malste-999bb3143/" target="_blank"><img src="img/mikael.jpg" alt="team-member">
+            </a><p>
               Mikael Malste <br />
               SDN Developer
-
             </p>
           </div>
         </div>
