--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="right">
-          <img src="img/place.jpg" alt="">
+          <img src="img/cluster.jpg" alt="">
         </div>
       </div>
       <!-- clear floats -->
@@ -119,7 +119,7 @@
         </div>
 
         <div class="left">
-          <img src="img/place.jpg" alt="">
+          <img src="img/code.jpg" alt="">
         </div>
       </div>
 
