--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@
     <link rel="shortcut icon" type="image/png" href="img/fav.png"/>
 
     <script src="js/jquery-3.2.1.min.js"></script>
-<!--
-    <script>
-        $(function() {
-          $.scrollify({
-            section : ".example-classname",
-          });
-        });
-    </script>
-
-  -->
 
     <title>Overflow</title>
 
@@ -83,6 +73,7 @@
     </section>
     <!-- About -->
     <section id="About" class="about example-classname">
+
       <h1>ABOUT</h1>
 
       <div class="container">
@@ -108,9 +99,10 @@
     <section id="Solution" class="solution example-classname">
 
 
+    <div class="wrapper">
       <h1>SOLUTION</h1>
-
       <div class="container">
+
         <div class="right note">
           <p>
             Our challenge is to provide something new and exciting to networking
@@ -125,7 +117,7 @@
 
       <!-- clear floats -->
       <div class="clear"></div>
-
+    </div>
     </section>
 
 
@@ -199,11 +191,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scripts.js"></script>
-<!--
-    <script src="js/scroll.min.js"></script>
--->
-
-
 
 </body>
 
