--- a/index.html
+++ b/index.html
@@ -54,20 +54,12 @@
                     <li><a href="#Solution" class="page-scroll">SOLUTION</a></li>
                     <li><a href="#Team" class="page-scroll">TEAM</a></li>
                     <li><a href="http://wimmalab.github.io/blog" target="_blank" class="page-scroll"><span class="button-blog">BLOG</span></a></li>
-                </ul>
+                    <li><a href="https://cybertrust.labranet.jamk.fi/cf2017/overflow/wikis/home" target="_blank" class="page-scroll"><span class="button-blog">GITLAB</span></a></li>
+                    </ul>
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
-
-
-    <!-- Landing
-    <section id="landing" class="landing">
-        <div class="logo">
-            <div class="smoke"></div>
-        </div>
-    </section>
-    -->
 
     <section class="landing-new example-classname">
     </section>
